src/discrete-layer/components/system-status/cell-renderer/job-details.raster-job-data.css
#rasterJobData.jobDataContainer {
  flex-direction: row;
  font-weight: bold;
}

#rasterJobData .errorsCountContainer {
  position: absolute;
  right: 140px;
}

body[dir='rtl'] #rasterJobData .errorsCountContainer {
  right: unset;
  left: 140px;
}

#rasterJobData .errorsCountContainer>a {
  color: var(--mdc-theme-gc-error-medium) !important;
}

#rasterJobData .errorsCountContainer .error {
  font-size: 32px;
  cursor: default !important;
}

#rasterJobData .errorContainer {
  flex-grow: 1;
  display: flex;
  color: var(--mdc-theme-gc-error-high);
  align-items: flex-start;
}

#rasterJobData .errorsCountContainer {
  display: flex;
  align-items: center;
  /* gap: 6px; */
}

#rasterJobData.jobDataContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

